# GGDealsScraper

./: .gitignore  pyproject.toml  run_service.sh
app/: config.py  crud.py  database.py  default_config.toml  main.py  scraper.py
app/database/models/: game_price_data.py  shop_price.py
app/gg_deals/: scraper.py
app/models/: __init__.py  game.py  game_price.py  game_price_data.py  shop_price.py
app/routers/: game.py
app/schemas/: __init__.py  game_base.py
scripts/: greasemonkey.js
service/: GGDealsScraper.service
src/: scraper.py
src/database/models/: game_price_data.py
