[tool.poetry]
name = "ggdealsscraper"
version = "0.1.0"
description = ""
authors = ["Shan <pruskimateusz93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.1"
requests = "^2.31.0"
pydantic = "^1.9.1"
fastapi = "^0.109.1"
uvicorn = "^0.18.2"
SQLAlchemy = "^1.4.39"
black = "^22.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
